[package]
name = "si470x"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/si470x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the Si470x FM radio turner (receiver) family."
readme = "README.md"
keywords = ["fm", "radio", "receiver", "turner", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/si470x-rs"
documentation = "https://docs.rs/si470x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/si470x-rs", branch = "master" }
coveralls = { repository = "eldruin/si470x-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "0.1"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
